# Watermar-King

./: .gitignore  README.md  WaterMark.py  WaterMarker.py  pyproject.toml  requirements.txt  test.py
src/: __init__.py
src/WaterMarker/: WaterMarker.py  __init__.py
src/watermar_king/: WaterMarker.py  __init__.py
tests/: test.py
