[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watermar_king"
version = "1.0.0"
dependencies = [
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "decorator==4.4.2",
    "idna==3.10",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "moviepy==1.0.3",
    "numpy==2.2.3",
    "opencv-python==4.11.0.86",
    "pillow==11.1.0",
    "proglog==0.1.10",
    "pydub==0.25.1",
    "pypdfium2==4.30.1",
    "pyttsx3==2.98",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "urllib3==2.3.0",
    "Wand==0.6.13",
]
authors = [{name = "Khalid M. Chandio", email = "man.of.honour@gmail.com"}]
keywords = ["watermark","watermarker", "watermarking"]
readme = "README.md"
requires-python = ">=3"
description = "Watermark Images, PDFs, Videos and Audios"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/KhalidMChandio/WaterMarker"

[tool.setuptools.packages.find]
where = ["src"]
